--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <canvas id="canvas" height="735px" width="1200px"></canvas>
     
 
-    <script src="app.js"></script>
+    <script src="/Snake-Game/app.js"></script>
 </body>
 </html>
